--- a/MuammarRizalPortfolio/css/style.css
+++ b/MuammarRizalPortfolio/css/style.css
@@ -6,6 +6,7 @@ body {
   font-weight: 500;
   background: #ffffff;
   font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
 h1,
@@ -1132,80 +1133,6 @@ a:focus {
 }
 
 /*******************************/
-/******* Testimonial CSS *******/
-/*******************************/
-.testimonial {
-  position: relative;
-  width: 100%;
-  padding: 45px 0;
-}
-
-.testimonial .testimonials-carousel {
-  position: relative;
-  width: calc(100% + 30px);
-  margin: 0 -15px;
-}
-
-.testimonial .testimonial-item {
-  position: relative;
-  width: 100%;
-  padding: 0 15px;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-}
-
-.testimonial .testimonial-profile {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.testimonial .testimonial-profile img {
-  width: 80px;
-  margin-bottom: -1px;
-}
-
-.testimonial .testimonial-name {
-  padding-left: 15px;
-  width: calc(100% - 95px);
-}
-
-.testimonial .testimonial-name h3 {
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-
-.testimonial .testimonial-name p {
-  margin: 0;
-  font-style: italic;
-}
-
-.testimonial .testimonial-text p {
-  margin: 0;
-}
-
-.testimonial .owl-dots {
-  margin-top: 15px;
-  text-align: center;
-}
-
-.testimonial .owl-dot {
-  display: inline-block;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  border-radius: 0;
-  background: #fdbe33;
-}
-
-.testimonial .owl-dot.active {
-  background: #20212b;
-}
-
-/*******************************/
 /******** Volunteer CSS ********/
 /*******************************/
 .volunteer {
@@ -1545,6 +1472,7 @@ a:focus {
 @media (max-width: 575.98px) {
   .contact .contact-form {
     max-width: 300px;
+    overflow-x: hidden;
   }
 }
 
@@ -2040,14 +1968,6 @@ a:focus {
   margin-bottom: 10px;
   color: #ffffff;
   transition: 0.3s;
-}
-
-.footer .footer-link a::before {
-  position: relative;
-  content: "\f105";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  margin-right: 10px;
 }
 
 .footer .footer-link a:hover {
