--- a/MuammarRizalPortfolio/css/style.css
+++ b/MuammarRizalPortfolio/css/style.css
@@ -6,7 +6,6 @@ body {
   font-weight: 500;
   background: #ffffff;
   font-family: "Quicksand", sans-serif;
-  overflow-x: hidden;
 }
 
 h1,
@@ -1475,7 +1474,7 @@ a:focus {
   }
   body {
     overflow-x: hidden;
-    /* width: 100%; */
+    width: 100vw;
   }
 }
 
